# dsacp

./: .gitignore  CMakeLists.txt  bst  hamiltoniain  hamiltoniain.cpp  inversioncount  inversioncount.cpp  main.cpp  output.txt  pavidarsini  pavidarsini.cpp  preorder  preorder.cpp  stltut  stltut.cpp
DBMS/: Normalization-cluade.md  Normalization.md  acid.md
OOPS/: inheritance.md  interface-abstract.md  oops.md  poylmorphism.md
algorithms-main/: bubblesort.cpp  djikstradutchflag.cpp  floydlinkedlistcycle.cpp  insertionsort.cpp  kadanesalgorithm.cpp  mergesort.cpp  quicksort.cpp  selectionsort.cpp  twopointertechnique.cpp
competetive-programming/techniques/: a.out  fastExponantiation.cpp
data-structures-main/: 10pointers.cpp  11maths.cpp  12arrays2d.cpp  13pointers.cpp  14memoryallocation.cpp  15misc.cpp  16recursion.cpp  17linkedlist.cpp  1intro.txt  1pattern.cpp  2operators.cpp  3switchandfor.cpp  4arrays.cpp  5binarysearch.cpp  6selectionsrt.cpp  7bubblesort  7bubblesort.cpp  8qnsarrays.cpp  9chararraysandstrings.cpp  README.md
dsa-python/: bfs.py  dfs.py  pallindrome.py  testing.py  twosum.py
pepcoding/1.Binarysearch/: BST.cpp  maximizetheminimeze  maximizetheminimeze.cpp  pivotinsortedarray.cpp  rotiprata  rotiprata.cpp
pepcoding/10.Heap/: babarheap  babarheap.cpp  heapimpl.cpp  heapsort  heapsort.cpp  inplaceheapsort  inplaceheapsort.cpp
pepcoding/11.Greedy/: coinchangeDP.cpp  democpp.cpp  jobscheduling.cpp  mergeoverlappingintervals.cpp  minsteptoone.cpp
pepcoding/12.Binarytree/: BinaryTree.cpp  binarytreecatalan  bubble  checkbalancedheighttree.cpp  maxsumofnodesatanychild  maxsumofnodesatanychild.cpp  preorder  preorder.cpp  preordertotree  sumofthedescends  sumofthedescends.cpp
pepcoding/14.Graph/: bindmininpath  boggleboard.cpp  cycleindirectedgraph.cpp  djikstra.cpp  graphtopo.cpp  hashmapimplementation  hashmapimplementation.cpp  implementation  implementation.cpp  masabimplementation.cpp  solution.cpp
pepcoding/15.DynamicProgrammin/: boyGirlintersect  coinschange.cpp  frogjump  frogjump.cpp  longestincreasingsubsequence  lowestcommonsubsequence.cpp  minimizethetotalwork  minimum_falling_path_sum  optimalgamestrategy.cpp  regexchecker.cpp  rodcuttingproblem  solution  tempCodeRunnerFile.cpp  winesmaxprofit  winesmaxprofit.cpp
pepcoding/16.hashing/: hashmap.h  hashtable  hashtable.cpp
pepcoding/17.Math_Arthimeic/: 10e9_sieve  10e9_sieve.cpp  a_by_b_mod_m  a_by_b_mod_m.cpp  binary_exponantiation.cpp  gcd  gcd.cpp  matrix_exponetiation.cpp  modulo_arthemetic  modulo_arthemetic.cpp  prime_factroisation_divisors  prime_factroisation_divisors.cpp  sieve_algoritim  sieve_algoritim.cpp
pepcoding/17.matrixexponentiation/: matrix1
pepcoding/18.strings/: binarytree.cpp  maxweight.cpp  sortbyfrequency  sortbyfrequency.cpp  stirngwords.cpp  temp.cpp
pepcoding/19.Tries/: copilotsoltion  getMinimumOperations  getMinimumOperations.cpp  grpahcolor.cpp  triesdemo.cpp
pepcoding/2.Sorting/: 2_selection_sort.cpp  4_merge_sort.cpp  7_radix_sort.cpp  bubble.cpp
(+214 files in other folders)
