cmake_minimum_required(VERSION 3.27)
project(dsacp)

set(CMAKE_CXX_STANDARD 14)

add_executable(dsacp
        algorithms-main/bubblesort.cpp
        algorithms-main/djikstradutchflag.cpp
        algorithms-main/floydlinkedlistcycle.cpp
        algorithms-main/insertionsort.cpp
        algorithms-main/kadanesalgorithm.cpp
        algorithms-main/mergesort.cpp
        algorithms-main/quicksort.cpp
        algorithms-main/selectionsort.cpp
        algorithms-main/twopointertechnique.cpp
        data-structures-main/10pointers.cpp
        data-structures-main/11maths.cpp
        data-structures-main/12arrays2d.cpp
        data-structures-main/13pointers.cpp
        data-structures-main/14memoryallocation.cpp
        data-structures-main/15misc.cpp
        data-structures-main/16recursion.cpp
        data-structures-main/17linkedlist.cpp
        data-structures-main/1pattern.cpp
        data-structures-main/2operators.cpp
        data-structures-main/3switchandfor.cpp
        data-structures-main/4arrays.cpp
        data-structures-main/5binarysearch.cpp
        data-structures-main/6selectionsrt.cpp
        data-structures-main/7bubblesort.cpp
        data-structures-main/8qnsarrays.cpp
        data-structures-main/9chararraysandstrings.cpp
        pepcoding/binarysearch.cpp/aggresivecows.cpp
        pepcoding/binarysearch.cpp/EKO.cpp
        pepcoding/binarysearch.cpp/maximizetheminimeze.cpp
        pepcoding/binarysearch.cpp/pivotinsortedarray.cpp
        pepcoding/binarysearch.cpp/rotiprata.cpp
        pepcoding/bitmanipulation/2uni.cpp
        pepcoding/bitmanipulation/2unique.cpp
        pepcoding/bitmanipulation/3uniquenumber.cpp
        pepcoding/bitmanipulation/bitmasking.cpp
        pepcoding/Heap/babarheap.cpp
        pepcoding/Heap/gptheap.cpp
        pepcoding/Heap/heap.cpp
        pepcoding/Heap/heapimpl.cpp
        pepcoding/Heap/heapsort.cpp
        pepcoding/matrixexponentiation/matrix1.cpp
        pepcoding/miscellenous/3sumadvanced.cpp
        pepcoding/miscellenous/carryforward.cpp
        pepcoding/miscellenous/distinct.cpp
        pepcoding/miscellenous/leaderinArray.cpp
        pepcoding/miscellenous/matrixramuquestion.cpp
        pepcoding/miscellenous/maxsubarray.cpp
        pepcoding/miscellenous/minandmax.cpp
        pepcoding/miscellenous/minsubarray.cpp
        pepcoding/miscellenous/multiset.cpp
        pepcoding/miscellenous/nearestcab.cpp
        pepcoding/miscellenous/powerofx.cpp
        pepcoding/miscellenous/printallsubstes.cpp
        pepcoding/miscellenous/printbinary.cpp
        pepcoding/miscellenous/stockspan.cpp
        pepcoding/miscellenous/subsum.cpp
        pepcoding/miscellenous/test.cpp
        pepcoding/qu/bucketsort.cpp
        pepcoding/qu/largestnumber.cpp
        pepcoding/qu/quicksort.cpp
        pepcoding/qu/tempCodeRunnerFile.cpp
        main.cpp)

add_executable(binarystrings pepcoding/recursion/binarystrings.cpp)